--- a/css1.css
+++ b/css1.css
@@ -1,5 +1,5 @@
 body{
-		background: url(../img/Virtual2.jpg);
+		background: url(./img/Virtual2.jpg);
 		background-size: cover;
 		color: purple;
 		font-family: sans-serif;
