--- a/css1.css
+++ b/css1.css
@@ -7,7 +7,12 @@ body{
 
 }
 
-img && .container{
+nav[class="navbar navbar-default"]{
+	position: relative;
+	left:1%;
+}
+
+img[class=container]{
 	height: 150px;
 }
 
@@ -17,18 +22,18 @@ img && .container{
 }
 
 #left{
-	float: middle;
+	position: absolute;
 	display: inline-block;
-	padding: 15px;
-	margin-right: 10%;
+	top:35%;
+	left:20%;
+	padding: 2%;
 	margin-top: 2%;
 }
 
 #right{
-	float:middle;
-	display:inline-table;
-	margin-left: -5%;
-	margin-top: -9%;
+	position: absolute;
+	top: 37%;
+	left: 55%;
 }
 
 #bottom{
@@ -38,4 +43,30 @@ img && .container{
 .dropdown:hover .dropdown-menu{
 	display:block;
 }
+
+article[id=a]{
+	position: relative;
+	float:left;
+	margin: 5%;
+	display: inline-block;
+	width: 40%;
+}
+
+article[id=b]{
+	position:absolute;
+	float:left;
+	top: 10%;
+	left: 45%;
+	margin: 5%;
+	display: inline-block;
+	width: 40%;
+}
+
+footer{
+	position:absolute;
+	bottom:2%;
+	left:45%;
+}
+
+
 
